--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
   }
 
   .btn-icon {
-    @apply bg-transparent border-none;
+    @apply bg-transparent border-none hover:bg-transparent hover:scale-125 hover:opacity-100 transition-transform;
   }
 
   .max-container {
