--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,20 @@ body {
 }
 
 @layer utilities {
-  .btn-pink {
-    @apply bg-bubblegum border border-bubblegum text-white px-6 py-3 rounded-full hover:bg-pink-700;
+  .btn-primary {
+    @apply bg-fern border border-fern text-white px-6 py-3 rounded-full hover:bg-green-700;
   }
 
-  .btn-negative {
-    @apply bg-transparent border-white text-white px-6 py-3 rounded-full hover:bg-pink-700;
+  .btn-transparent {
+    @apply bg-transparent border-white border text-white px-6 py-3 rounded-full hover:bg-green-700;
   }
 
   .btn-icon {
-    @apply bg-transparent border-none hover:bg-transparent hover:scale-125 hover:opacity-100 transition-transform;
+    @apply bg-transparent border-none mx-4 hover:scale-125 hover:opacity-100 transition-transform;
+  }
+
+  .btn-underline {
+    @apply bg-transparent underline border-none text-white;
   }
 
   .banner-bg-style {
@@ -44,6 +48,17 @@ body {
     background-image: url("/consult.jpg");
   }
 
+  .long-text {
+    max-height: 0;
+    overflow: hidden;
+    display: inline-block;
+    transition: max-height 0.3s;
+  }
+
+  .expanded {
+    max-height: 50rem;
+    transition: max-height 2s;
+  }
   .image-cropper {
     width: 350px;
     height: 350px;
