updated images and expertise cards

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@ body {
 
 @layer utilities {
   .btn-primary {
-    @apply bg-fern border border-fern text-white px-6 py-3 rounded-full hover:bg-green-700;
+    @apply bg-tertiary border border-tertiary text-white px-6 py-3 rounded-full hover:bg-green-700;
   }
 
   .btn-transparent {
@@ -34,7 +34,7 @@ body {
     @apply bg-transparent underline border-none text-white;
   }
 
-  .banner-bg-style {
+  .hero-bg-style {
     @apply bg-gradient-to-r from-opacity-70 to-opacity-0 bg-cover bg-center;
   }
 
@@ -59,22 +59,22 @@ body {
     max-height: 50rem;
     transition: max-height 2s;
   }
-  .image-cropper {
+  /* .image-cropper {
     width: 350px;
     height: 350px;
-    /* position: relative; */
+    position: relative;
     overflow: hidden;
     border-radius: 100%;
-  }
+  } */
 
-  .profile-pic {
-    /* display: inline; */
-    /* margin: 0 auto; */
+  /* .profile-pic {
+    display: inline;
+    margin: 0 auto;
     margin-left: 10%;
     scale: 140%;
     height: 100%;
     width: auto;
-  }
+  } */
 
   .max-container {
     @apply mx-auto max-w-[1440px];
