--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 /* @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=GFS+Didot&family=Montserrat:wght@500&family=Roboto:wght@100&family=Trocchi&family=Ysabeau+SC:wght@600&display=swap"); */
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -14,12 +16,12 @@
 }
 
 body {
-  font-family: Montserrat;
+  font-family: "Open Sans";
 }
 
 @layer utilities {
   .btn-primary {
-    @apply bg-tertiary border border-tertiary text-white px-6 py-3 rounded-full hover:bg-green-700;
+    @apply bg-tertiary border border-tertiary text-white px-6 py-3 rounded-full font-bold hover:bg-green-700;
   }
 
   .btn-transparent {
@@ -31,11 +33,11 @@ body {
   }
 
   .btn-selected {
-    @apply bg-transparent border-none mx-4 hover:scale-125 hover:opacity-100 transition-transform !fill-primary;
+    @apply bg-transparent border-none mx-4 hover:scale-125 transition-transform !fill-primary;
   }
 
   .btn-underline {
-    @apply bg-transparent underline border-none text-white;
+    @apply bg-transparent underline border-none text-white font-light;
   }
 
   .hero-bg-style {
@@ -113,6 +115,6 @@ body {
   }
 
   .info-text {
-    @apply font-montserrat text-slate-gray text-lg leading-7;
+    @apply text-slate-gray text-lg leading-7;
   }
 }
