mobile updates for nav, hero, herotext, intro, and expertise sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,7 +62,7 @@ body {
   }
 
   .expanded {
-    max-height: 50rem;
+    max-height: max-content;
     transition: max-height 2s;
   }
   /* .image-cropper {
