--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=GFS+Didot&family=Montserrat:wght@500&family=Roboto:wght@100&family=Trocchi&family=Ysabeau+SC:wght@600&display=swap"); */
-
-/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
-
-/* hamburgers-custom.css */
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap");
-
-/* @import "hamburgers/dist/hamburgers.css"; */
 
 @tailwind base;
 @tailwind components;
@@ -44,7 +36,7 @@ body {
     @apply bg-transparent underline border-none text-white font-light;
   }
   .btn-card {
-    @apply bg-transparent underline border-none text-primary font-light text-sm;
+    @apply bg-transparent underline border-none text-primary font-normal text-sm;
   }
 
   .hero-bg-style {
