--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@ body {
 
 @layer utilities {
   .btn-primary {
-    @apply bg-tertiary border-2 border-white text-white px-6 py-[10px] rounded-full font-normal hover:bg-quaternary;
+    @apply bg-tertiary border-2 border-white text-white text-xm px-6 py-[10px] rounded-full font-normal cursor-pointer hover:bg-quaternary;
   }
 
   .btn-transparent {
