--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,7 +10,7 @@
 }
 
 body {
-  font-family: "Open Sans";
+  /* font-family: "Open Sans"; */
 }
 
 @layer utilities {
