--- a/app/scss/Hero.module.scss
+++ b/app/scss/Hero.module.scss
@@ -1,37 +1,135 @@
 @use "./quries.scss";
 @import "./quries.scss";
 
+.sectionContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: relative;
+}
+
 .imageContainer {
   width: 100%;
+  height: 25rem;
+  min-width: calc(100% + 25%);
+  position: relative;
+  @include mid-break {
+    min-width: none;
+    height: 37rem;
+  }
+  @include large-break {
+    height: 40rem;
+  }
+  @include custom-break-1800 {
+    height: 50rem;
+  }
 }
 .image {
-  -moz-transform: scaleX(-1);
+  -moz-transform: scaleX();
   -o-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
+  // -moz-transform: scaleX(-1) translateX(-20%);
+  // -o-transform: scaleX(-1) translateX(-20%);
+  // -webkit-transform: scaleX(-1) translateX(-20%);
+  // transform: scaleX(-1) translateX(-20%);
   filter: FlipH;
   -ms-filter: "FlipH";
 
-  z-index: 20;
-  position: absolute;
+  // z-index: 10;
+  // position: absolute;
+  // min-width: calc(100% + 25%);
+  // left: 0%;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
+  // @include mid-break {
+  //   min-height: 100%;
+  // }
+  @include large-break {
+    -moz-transform: scaleX();
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
 }
 
-.imgVert {
-  -moz-transform: scaleY(-1);
-  -o-transform: scaleY(-1);
-  -webkit-transform: scaleY(-1);
-  transform: scaleY(-1);
-  filter: FlipV;
-  -ms-filter: "FlipV";
-}
+// .imgVert {
+//   -moz-transform: scaleY(-1);
+//   -o-transform: scaleY(-1);
+//   -webkit-transform: scaleY(-1);
+//   transform: scaleY(-1);
+//   filter: FlipV;
+//   -ms-filter: "FlipV";
+// }
 
-.imgHorVert {
-  -moz-transform: scale(-1, -1);
-  -o-transform: scale(-1, -1);
-  -webkit-transform: scale(-1, -1);
-  transform: scale(-1, -1);
+// .imgHorVert {
+//   -moz-transform: scale(-1, -1);
+//   -o-transform: scale(-1, -1);
+//   -webkit-transform: scale(-1, -1);
+//   transform: scale(-1, -1);
+// }
+
+.headerContainer {
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    to top right,
+    rgba(0, 0, 0, 0.8) 12%,
+    transparent 70%
+  );
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 0 32px 32px;
+  gap: 10px;
+  @include mid-break {
+    gap: 14px;
+    padding: 0 56px 56px;
+  }
+  @include large-break {
+    gap: 14px;
+    padding: 0 56px 56px;
+  }
+  @include custom-break-1800 {
+    gap: 14px;
+    padding: 0 72px 72px;
+  }
+
+  h1 {
+    display: flex;
+    color: white;
+    font-size: 32px;
+    line-height: normal;
+    @include mid-break {
+      font-size: 64px;
+      flex-direction: column;
+    }
+    @include large-break {
+      font-size: 64px;
+      flex-direction: column;
+    }
+    @include custom-break-1800 {
+      flex-direction: row;
+    }
+  }
+  h2 {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 20px;
+    @include mid-break {
+      font-size: 30px;
+      flex-direction: row;
+    }
+    @include large-break {
+      font-size: 30px;
+      flex-direction: row;
+    }
+  }
 }
