--- a/app/scss/Resources.module.scss
+++ b/app/scss/Resources.module.scss
@@ -67,7 +67,7 @@
 .media {
   position: relative;
   z-index: 30;
-  background-color: white;
+  background-color: #f9f4e9;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -92,13 +92,31 @@
   }
 
   .imageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 30px;
+    background-color: white;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    padding: 30px;
     max-width: 500px;
+    // height: 300px;
+    @include mid-break {
+      gap: 40px;
+    }
     @include large-break {
-      max-width: 600px;
+      flex-direction: row;
+      gap: 60px;
+      max-width: 700px;
     }
     .image {
+      box-shadow: 0 5px 24px rgba(0, 0, 0, 0.2);
       object-fit: cover;
-      border-radius: 0.5rem;
+      @include large-break {
+        min-width: 250px;
+      }
     }
   }
 }
