--- a/app/scss/Resources.module.scss
+++ b/app/scss/Resources.module.scss
@@ -47,6 +47,8 @@
 
   .imageContainer {
     max-width: 500px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 4px 12px rgba(0, 0, 0, 0.08);
+
     @include large-break {
       max-width: 600px;
     }
@@ -98,7 +100,9 @@
 
     gap: 30px;
     background-color: white;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 4px 12px rgba(0, 0, 0, 0.08);
+
     border-radius: 15px;
     padding: 30px;
     max-width: 500px;
@@ -112,7 +116,10 @@
       max-width: 700px;
     }
     .image {
-      box-shadow: 0 5px 24px rgba(0, 0, 0, 0.2);
+      // box-shadow: 0 5px 24px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 4px 12px rgba(0, 0, 0, 0.08);
+      border-radius: 24px;
+      padding: 10px;
       object-fit: cover;
       @include large-break {
         min-width: 250px;
