--- a/app/scss/Resources.module.scss
+++ b/app/scss/Resources.module.scss
@@ -108,21 +108,24 @@
     max-width: 500px;
     // height: 300px;
     @include mid-break {
+      padding: 40px;
       gap: 40px;
     }
     @include large-break {
-      flex-direction: row;
+      // flex-direction: row;
       gap: 60px;
-      max-width: 700px;
+      max-width: 600px;
+      padding: 50px;
     }
     .image {
       // box-shadow: 0 5px 24px rgba(0, 0, 0, 0.2);
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 4px 12px rgba(0, 0, 0, 0.08);
-      border-radius: 24px;
+      border-radius: 10px;
       padding: 10px;
       object-fit: cover;
       @include large-break {
         min-width: 250px;
+        border-radius: 24px;
       }
     }
   }
